# MPS_Project

./: CMakeLists.txt  README.md
documentatie/: coding-style.txt
src/: Functions.cpp  Functions.h  GlobalPixel.cpp  GlobalPixel.h  LocalPixel.cpp  LocalPixel.h  Main.cpp  Main.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Pixel.cpp  Pixel.h
src/output/: global_output.cpp  output.txt
src/testing results/: global  local
